--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,7 +1,5 @@
 # Artifact Hub repository metadata file
 repositoryID: 0966e120-2052-4050-b60a-3c9aedc7eebb
 owners:
-  - name: Qualys DevOps Bar
-    email: devops-bar@qualys.com
-  - name: Qualys Support
-    email: support@qualys.com
+  - name: Andrew Nelson
+    email: anelson@qualys.com
