Set better defaults for qcsSensor to reduce configuration errors v1.1.6
Changed default values for general sensor (qcsSensor) to improve out-of-box experience:
- performScaScan: false -> true (enable SCA scanning by default)
- withoutPersistentStorage: false -> true (simpler deployment without PV)
- enableConsoleLogs: false -> true (easier troubleshooting)
- enableStorageDriver and storageDriverType remain as overlay (correct for non-OpenShift)

These defaults reduce the number of flags users need to set manually,
minimizing configuration errors while maintaining the ability to override
any setting as needed.

--- a/qualys-unified/charts/qualys-tc/charts/qcs-sensor/values.yaml
+++ b/qualys-unified/charts/qualys-tc/charts/qcs-sensor/values.yaml
@@ -45,10 +45,10 @@ qualys:
   imagePullPolicy: "Always"
   cpu: "500m"
 
-  # Additional arguments for CS sensor 
+  # Additional arguments for CS sensor
   args:
-    withoutPersistentStorage: false # Peristent volume configuration
-    enableConsoleLogs: false
+    withoutPersistentStorage: true # Default: true for easier deployment
+    enableConsoleLogs: true # Default: true for easier troubleshooting
     cicdDeployedSensor: false
     registrySensor: false
     concurrentScan: "4" # A valid range is between 1-20
@@ -60,7 +60,7 @@ qualys:
     maskEnvVariable: false
     optimizeImageScans: true # Applicable only for general sensor
     disableImageScan: false
-    performScaScan: false
+    performScaScan: true # Default: true to enable SCA scanning
     disallowInternetAccessForSca: false
     scaScanTimeoutInSeconds: "900"
     performSecretDetection: false
