--- a/qualys-unified/values.yaml
+++ b/qualys-unified/values.yaml
@@ -226,8 +226,8 @@ qualysTc:
 
       # Sensor configuration arguments
       args:
-        withoutPersistentStorage: false
-        enableConsoleLogs: false
+        withoutPersistentStorage: true  # Default: true for easier deployment
+        enableConsoleLogs: true  # Default: true for easier troubleshooting
         cicdDeployedSensor: false
         registrySensor: false
         concurrentScan: "4"  # Valid range: 1-20
@@ -239,7 +239,7 @@ qualysTc:
         maskEnvVariable: false
         optimizeImageScans: true
         disableImageScan: false
-        performScaScan: false
+        performScaScan: true  # Default: true to enable SCA scanning
         disallowInternetAccessForSca: false
         scaScanTimeoutInSeconds: "900"
         performSecretDetection: false
