--- a/qualys-unified/charts/qualys-tc/charts/qcs-sensor/values.yaml
+++ b/qualys-unified/charts/qualys-tc/charts/qcs-sensor/values.yaml
@@ -134,7 +134,7 @@ qualys:
   priorityClass:
     enabled: false
     priorityClassName:  #priority class name used in daemonset
-    priorityClassValue:  #value determines the priority e.g. "1000000"
+    priorityClassValue: 1000000  #value determines the priority (integer)
     preemptionPolicy:  #preemption policy for pod
 
   hostNetwork: true
