--- a/qualys-unified/values.yaml
+++ b/qualys-unified/values.yaml
@@ -304,7 +304,7 @@ qualysTc:
       priorityClass:
         enabled: false
         priorityClassName: ""
-        priorityClassValue: ""
+        priorityClassValue: 1000000  # Integer value for priority (not a string)
         preemptionPolicy: ""
 
       hostNetwork: true
